<resources>

    <string name="app_name">QuickRadar</string>
    <string name="url">http://www.bom.gov.au/radar/IDR193.gif</string>
    <string name="info">App stats and sources go here \nimage data from:\n the bureau of meteorology \n Queensland govermentr Qimagery service \nGoogle Maps \n etc etc</string>
    <string name="overlay">Overlay</string>
    <string name="background">Background</string>
    <string name="settings">SETTINGS</string>
    <string name="animation">Animations</string>
    <string name="style">Map Style</string>
    <string name="doneButton">APPLY</string>
    <string name="range64">Range:\n    64km</string>
    <string name="range128">Range:\n   128km</string>
    <string name="range256">Range:\n   256km</string>
    <string name="range512">Range:\n   512km</string>
    <string name="radar">Radar</string>


    <string-array name="range">
        <item>64km</item>
        <item>128km</item>
        <item>256km</item>
    </string-array>

    <string-array name="mapStyles">
        <item>BOM Standard</item>
        <item>Google Maps Satellite</item>
        <item>Qimagery.gov</item>
    </string-array>


</resources>
