<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Settings">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:layout_weight="1"
        android:layout_margin="24sp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:textSize="36sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/style"
            android:layout_weight="15"
            android:layout_gravity="center"
            android:layout_marginBottom="5sp"
            android:layout_margin="24sp"
            android:textSize="20sp"/>
        <Spinner
            android:id="@+id/mapStyles"
            android:gravity="center_horizontal"
            android:layout_weight="1"
            android:layout_margin="12sp"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_gravity="center_vertical"
            android:entries="@array/mapStyles">
        </Spinner>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="fill_vertical"
        android:layout_weight="1">

        <TextView
            android:id="@+id/range"
            android:gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/range128"
            android:layout_weight="1"
            android:layout_marginBottom="5sp"
            android:layout_margin="20sp"
            android:textSize="20sp"/>

        <SeekBar
            android:id="@+id/seekBar"
            android:layout_margin="24sp"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:layout_weight="10"
            android:thumb="@drawable/thumb"
            style="@style/Widget.AppCompat.SeekBar.Discrete"
            android:max="2"
            android:progress="0"/>

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:onClick="doneClicked"
        android:layout_gravity="center"
        android:layout_margin="36sp"
        android:layout_weight="1"
        android:text="@string/doneButton"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:layout_gravity="bottom"
        android:text="@string/info"
        android:layout_weight="1"
        android:layout_margin="12sp"
        android:textSize="20sp"/>


</android.support.v7.widget.LinearLayoutCompat>