<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="4">

        <ImageView
            android:id="@+id/imageViewBackground"
            android:contentDescription="@string/background"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:scaleType="centerCrop"
            android:layout_gravity="center"
            android:src="@drawable/background256km" />

        <ImageView
            android:id="@+id/radarOverlay"
            android:contentDescription="@string/radar"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:scaleType="centerCrop" />

        <ImageView
            android:id="@+id/locationsOverlay"
            android:contentDescription="@string/overlay"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:scaleType="centerCrop"
            android:layout_gravity="center"
            android:src="@drawable/locations256km"
            android:visibility="visible"/>


        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:textSize="40sp"/>


        <android.support.design.widget.FloatingActionButton
            android:id="@+id/floatingActionButton2"
            android:layout_gravity="bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            app:backgroundTint="@color/colorPrimary"
            app:borderWidth="1dp"
            app:elevation="6dp"
            app:fabSize="normal"
            android:onClick="refreshRadar"
            android:layout_margin="16sp"
            app:srcCompat="@android:drawable/stat_notify_sync" />

    </FrameLayout>

</LinearLayout>